--- a/Logitech_shop/style.css
+++ b/Logitech_shop/style.css
@@ -12,5 +12,13 @@ float: left;
 }
 ul{
 list-style-type: none;  
+    display: block;
+
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 0px;
+
 }  
 # = ID
