--- a/Logitech_shop/style.css
+++ b/Logitech_shop/style.css
@@ -24,4 +24,11 @@ list-style-type: none;
 h1{
 margin: auto;
 }    
+
+body {
+   background-image:
+   url('https://cdn.earlygame.com/uploads/images/_1200x675_crop_center-center_none/Shroud-comeback.jpg?mtime=20200813095035&focal=none&tmtime=20200813102251');
+}
+
+
 # = ID
