--- a/Logitech_shop/style.css
+++ b/Logitech_shop/style.css
@@ -1,39 +1,61 @@
 .yikes{
 font-size: 50px;
 color: black;
-
 } 
 
-.button{
-text-decoration: none;  
-background-color: skyblue;
-margin-right: 2px;
-padding: 6px 12px;
-color: black;
-float: left;
-}
-ul{
-position: relative;
-list-style-type: none;  
-    display: block;
-
-    margin-block-start: 0;
-    margin-block-end: 0;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 0px;
-}  
-h1{
-margin: auto;
-}    
-
 body {
-   background-image:
-   url('logitech.png');
    background-repeat: no-repeat;
    font-family: Rockwell, Arial;
    color: white;
    text-align: center;
+   float: left;
 }
 
-# = ID
+
+body {
+  /* The image used */
+  background-image: url("logitech.png");
+
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: DodgerBlue;
+  color: white;
+}
+
+.topnav-right {
+  float: right;
+}
+
