--- a/Logitech_shop/style.css
+++ b/Logitech_shop/style.css
@@ -1,15 +1,21 @@
 .yikes{
 font-size: 50px;
-color: black;
+background-color: dodgerblue;
 } 
 
-body {
-   background-repeat: no-repeat;
-   font-family: Rockwell, Arial;
+.dud{
+  background-color: whitesmoke;
+  color: black;
+}
+  
+
+
+article {
    color: white;
    text-align: center;
-   float: left;
 }
+
+
 
 
 body {
@@ -28,7 +34,7 @@ body {
 
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Rockwell, Arial;
 }
 
 .topnav {
