--- a/Logitech_shop/style.css
+++ b/Logitech_shop/style.css
@@ -3,12 +3,15 @@ font-size: 50px;
 background-color: dodgerblue;
 } 
 
-.dud{
-  background-color: whitesmoke;
+
+div2 {
+  background-color: lightgrey;
+  width: 100%;
+  padding: 40px;
+  margin: 20px;
+  float: left;
   color: black;
 }
-  
-
 
 article {
    color: white;
