--- a/Logitech_shop/style.css
+++ b/Logitech_shop/style.css
@@ -13,7 +13,7 @@ article {
 
 body {
   /* The image used */
-  background-image: url("logitech.png");
+  background-image: url("p/hexagone.png");
 
   /* Full height */
   height: 100%;
@@ -66,13 +66,13 @@ body {
 .wrapper {
         display: grid;
     grid-gap: 10px;
-        grid-template-columns: 100px 100px 100px;
-        color: #444;
+        grid-template-columns: 30% 40% 30%;
+        
     }
 
     .box {
-        background-color: #444;
-        color: #fff;
+        background-color: none;
+        color: black;
         border-radius: 5px;
         padding: 20px;
         font-size: 150%;
@@ -83,13 +83,13 @@ body {
     }
     .b {
         grid-column: 3 ;
-        grid-row: 1 / span 2;
+        grid-row: 1;
     }
     .c {
         grid-column: 1 ;
         grid-row: 2 ;
     }
     .d {
-        grid-column: 2 ;
+        grid-column: 2 / span 3;
         grid-row: 2 ;
     }
