--- a/Logitech_shop/style.css
+++ b/Logitech_shop/style.css
@@ -72,7 +72,7 @@ body {
 
     .box {
         background-color: none;
-        color: black;
+        color: green;
         border-radius: 5px;
         padding: 20px;
         font-size: 130%;
