updated home page picture right side now

--- a/Logitech_shop/style.css
+++ b/Logitech_shop/style.css
@@ -13,7 +13,7 @@ article {
 
 body {
   /* The image used */
-  background-image: url("p/hexagone.png");
+  background-image: url("p/test.png");
 
   /* Full height */
   height: 100%;
@@ -71,11 +71,12 @@ body {
     }
 
     .box {
-        background-color: none;
-        color: green;
+        background-color: gray;
+        color: black;
         border-radius: 5px;
         padding: 20px;
-        font-size: 130%;
+        font-size: 150%;
+        
     }
 
     .a {
@@ -86,10 +87,10 @@ body {
         grid-row: 1;
     }
     .c {
-        grid-column: 1 ;
+        grid-column: 1 / span 2 ;
         grid-row: 2 ;
     }
     .d {
-        grid-column: 2 / span 3;
+        grid-column: 3;
         grid-row: 2 ;
     }
