--- a/Logitech_shop/style.css
+++ b/Logitech_shop/style.css
@@ -66,7 +66,7 @@ body {
 .wrapper {
         display: grid;
     grid-gap: 10px;
-        grid-template-columns: 20% 40% 30%;
+        grid-template-columns: 30% 40% 30%;
         
     }
 
@@ -93,4 +93,12 @@ body {
     .d {
         grid-column: 3;
         grid-row: 2 ;
+    }
+    .e{
+      grid-column: 1;
+      grid-row: 3;
+    }
+    .f{
+      grid-column: 2 /span 3;
+      grid-row: 3;
     }
