--- a/Logitech_shop/style.css
+++ b/Logitech_shop/style.css
@@ -3,14 +3,7 @@ font-size: 50px;
 background-color: dodgerblue;
 } 
 
-
-
-article {
-   color: white;
-   text-align: center;
-}
-
-
+/* BACKGROUND */
 body {
   /* The image used */
   background-image: url("p/test.png");
@@ -23,8 +16,9 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
+/* BACKGROUND END */
 
-
+/* NAV */
 body {
   margin: 0;
   font-family: Rockwell, Arial;
@@ -57,8 +51,9 @@ body {
 .topnav-right {
   float: right;
 }
+/* NAV END */
 
-
+/* grid */
 body {
   margin: 10px;
 }
@@ -102,3 +97,4 @@ body {
       grid-column: 2 /span 3;
       grid-row: 3;
     }
+/* grid END */
