broken page 2 big

--- a/Logitech_shop/style.css
+++ b/Logitech_shop/style.css
@@ -3,6 +3,10 @@ font-size: 50px;
 background-color: dodgerblue;
 } 
 
+body{
+  text-align: center;
+}
+
 /* BACKGROUND */
 body {
   /* The image used */
@@ -55,12 +59,12 @@ body {
 
 /* grid */
 body {
-  margin: 10px;
+  margin: 0;
 }
 
 .wrapper {
         display: grid;
-    grid-gap: 10px;
+        grid-gap: 10px;
         grid-template-columns: 30% 40% 30%;
         
     }
