--- a/Logitech_shop/styles.css
+++ b/Logitech_shop/styles.css
@@ -1,11 +1,11 @@
 /* grid */
 body {
-  margin: 10px;
+  margin: 0;
 }
 
 .wrapper {
         display: grid;
-    grid-gap: 10px;
+        grid-gap: 10px;
         grid-template-columns: 30% 40% 30%;
         
     }
@@ -100,10 +100,8 @@ body {
 .topnav-right {
   float: right;
 }
-
-
-body {
-  margin: 10px;
-}
 /* NAV END */
 
+body{
+  text-align: center;
+}
