--- a/Logitech_shop/styles.css
+++ b/Logitech_shop/styles.css
@@ -11,7 +11,6 @@ body {
     }
 
     .box {
-        background-color: gray;
         color: black;
         border-radius: 5px;
         padding: 20px;
@@ -76,6 +75,7 @@ body {
 .topnav {
   overflow: hidden;
   background-color: #333;
+  padding: 10px;
 }
 
 .topnav a {
