--- a/Blog/style.css
+++ b/Blog/style.css
@@ -9,9 +9,12 @@ body{
 
   /* Full height */
   height: 100%;
-  
+
   /* Center and scale the image nicely */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+
+  text-align: center;
+  size: 200px;
 }
