--- a/Fundament/fundament_opdracht_7/style.css
+++ b/Fundament/fundament_opdracht_7/style.css
@@ -1,44 +1,40 @@
-margin: 0;
+.wrapper {
+        display: grid;
+        grid-gap: 0px;
+        grid-template-columns: 30% 40% 30%;
+        
+    }
 
-body{
-  background-color: #ffeae3;
-}
+    .box {
+        
+        color: black;
+        border-radius: 5px;
+        padding: 20px;
+        font-size: 150%;
+        
+    }
 
-#wrapper {
-  background-color: #fcfdff;
-  padding: 10px;
-  margin: auto;
-}
-
-header {
-  background-color: #9fa2b2;
-  width: 510px;
-  height: 40px;
-  margin-bottom: 10px;
-}
-
-article {
-  background-color: #c0ccb5;
-  width: 120px;
-  height: 120px;
-  margin: 0 10px 10px 0;
-  cursor: pointer;
-}
-
-article:hover {
-  background-color: #ffeae3;
-}
-
-#sidebar {
-  background-color: #a9b2a1;
-  width: 120px;
-  height: 380px;
-  margin-bottom: 10px;
-}
-
-footer {
-  clear: both;
-  background-color: #505810;
-  width: 510px;
-  height: 40px;
-}
+    .a {
+        grid-column: 1 / span 2;
+        grid-row: 1;
+    }
+    .b {
+        grid-column: 3 ;
+        grid-row: 1;
+    }
+    .c {
+        grid-column: 1 / span 2 ;
+        grid-row: 2 ;
+    }
+    .d {
+        grid-column: 3;
+        grid-row: 2 ;
+    }
+    .e{
+      grid-column: 1;
+      grid-row: 3;
+    }
+    .f{
+      grid-column: 2 /span 3;
+      grid-row: 3;
+    }
