--- a/Fundament/fundament_opdracht_7/style.css
+++ b/Fundament/fundament_opdracht_7/style.css
@@ -2,6 +2,7 @@
         display: grid;
         grid-gap: 0px;
         grid-template-columns: 30% 40% 30%;
+        color: gray;
         
     }
 
