--- a/Fundament/fundament_opdracht_7/style.css
+++ b/Fundament/fundament_opdracht_7/style.css
@@ -2,13 +2,11 @@
         display: grid;
         grid-gap: 0px;
         grid-template-columns: 30% 40% 30%;
-        color: gray;
-        
     }
 
     .box {
         
-        color: black;
+        background-color: black;
         border-radius: 5px;
         padding: 20px;
         font-size: 150%;
@@ -16,16 +14,17 @@
     }
 
     .a {
-        grid-column: 1 / span 2;
+        grid-column: 2 / span 3;
         grid-row: 1;
+        color: red;
     }
     .b {
-        grid-column: 3 ;
-        grid-row: 1;
+        grid-column: 1 ;
+        grid-row: 1 / span 3;
     }
     .c {
-        grid-column: 1 / span 2 ;
-        grid-row: 2 ;
+        grid-column: 4;
+        grid-row: 1 /span 3;
     }
     .d {
         grid-column: 3;
