--- a/Fundament/fundament_opdracht_7/style.css
+++ b/Fundament/fundament_opdracht_7/style.css
@@ -1,38 +1,38 @@
 .wrapper {
         display: grid;
-        grid-gap: 0px;
-        grid-template-columns: 30% 40% 30%;
+        grid-gap: 2px;
+        
     }
 
     .box {
         
-        background-color: black;
+        background-color: gray;
         border-radius: 5px;
         padding: 20px;
         font-size: 150%;
+        color: white;
         
     }
 
     .a {
-        grid-column: 2 / span 3;
+        grid-column: 2 /span 3;
         grid-row: 1;
-        color: red;
     }
     .b {
         grid-column: 1 ;
         grid-row: 1 / span 3;
     }
     .c {
-        grid-column: 4;
-        grid-row: 1 /span 3;
+        grid-column: 3;
+        grid-row: 2 /span 3;
     }
     .d {
-        grid-column: 3;
+        grid-column: 2;
         grid-row: 2 ;
     }
     .e{
-      grid-column: 1;
-      grid-row: 3;
+      grid-column: 4;
+      grid-row: 1;
     }
     .f{
       grid-column: 2 /span 3;
