--- a/Logitech_shop/style.css
+++ b/Logitech_shop/style.css
@@ -76,6 +76,7 @@ body {
         border-radius: 5px;
         padding: 20px;
         font-size: 150%;
+        background-color: gray;
         
     }
 
