--- a/Logitech_shop/styles.css
+++ b/Logitech_shop/styles.css
@@ -5,16 +5,16 @@ body {
 
 .wrapper {
         display: grid;
-        grid-gap: 10px;
+        grid-gap: 0px;
         grid-template-columns: 30% 40% 30%;
         
     }
 
     .box {
-        color: black;
         border-radius: 5px;
         padding: 20px;
         font-size: 150%;
+        background-color: gray;
         
     }
 
