--- a/Logitech_shop/style.css
+++ b/Logitech_shop/style.css
@@ -10,7 +10,7 @@ body{
 /* BACKGROUND */
 body {
   /* The image used */
-  background-image: url("p/test.png");
+  background-image: url("p/test.jpg");
 
   /* Full height */
   height: 100%;
