--- a/Logitech_shop/styles.css
+++ b/Logitech_shop/styles.css
@@ -7,6 +7,7 @@ body {
         display: grid;
         grid-gap: 0px;
         grid-template-columns: 30% 40% 30%;
+        background-color: gray;
         
     }
 
@@ -14,7 +15,6 @@ body {
         border-radius: 5px;
         padding: 20px;
         font-size: 150%;
-        
     }
 
     .a {
@@ -53,7 +53,7 @@ body {
 /* BACKGROUND */
 body {
   /* The image used */
-  background-image: url("p/test.png");
+  background-image: url("p/test.jpg");
 
   /* Full height */
   height: 100%;
