--- a/Fundament/fundament_opdracht_7/style.css
+++ b/Fundament/fundament_opdracht_7/style.css
@@ -1,68 +1,69 @@
 .wrapper {
-        display: grid;
-        grid-gap: 20px;        
-    }
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: auto auto auto auto;        
+}
 
-    .box {
-        padding: 20px;
-        font-size: 150%;
-        color: black;
-    }
+.box {
+    padding: 20px;
+    font-size: 150%;
+    color: black;
+}
 
-    .a {
-        grid-column: 2 /span 3;
-        grid-row: 1;
-        background-color: #a0a3b4;
-        padding: 25px;
-    }
-    .b {
-        grid-column: 1 ;
-        grid-row: 1 / span 6;
-        background-color: #ffebe4;
-    }
-    .c {
-        grid-column: 4;
-        grid-row: 2 /span 2;
-        background-color: #aab3a2;
-    }
-    .d {
-        grid-column: 2;
-        grid-row: 2 ;
-        background-color:#c1cdb6;
-        padding: 140px;
-    }
-    .e{
-        grid-column: 5;
-        grid-row: 1 / span 6;
-        background-color: #ffebe4;
-    }
-    .f{
-        grid-column: 2;
-        grid-row: 3;
-        background-color: #c1cdb6;
-        padding: 140px;
-    }
-    .g{
-        grid-column: 3;
-        grid-row: 2;
-        background-color: #c1cdb6;
-        padding: 140px;
-    }
-    .h{
-        grid-column: 1 /span 5;
-        grid-row: 6;
-        background-color: #ffebe4;
-        padding: 15px;
-    }
-    .i{
-        grid-column: 3;
-        grid-row: 3;
-        background-color: #c1cdb6;
-        padding: 140px;
-    }
-    .j{
-      grid-column: 2/ span 3;
-        grid-row: 5;
-        background-color: #4f5707;
-        padding: 20px;
-    }
+.a {
+    grid-column: 2 /span 3;
+    grid-row: 1;
+    background-color: #a0a3b4;
+    padding: 25px;
+}
+.b {
+    grid-column: 1 ;
+    grid-row: 1 / span 6;
+    background-color: #ffebe4;
+}
+.c {
+    grid-column: 4;
+    grid-row: 2 /span 2;
+    background-color: #aab3a2;
+}
+.d {
+    grid-column: 2;
+    grid-row: 2 ;
+    background-color:#c1cdb6;
+    padding: 140px;
+}
+.e{
+    grid-column: 5;
+    grid-row: 1 / span 6;
+    background-color: #ffebe4;
+}
+.f{
+    grid-column: 2;
+    grid-row: 3;
+    background-color: #c1cdb6;
+    padding: 140px;
+}
+.g{
+    grid-column: 3;
+    grid-row: 2;
+    background-color: #c1cdb6;
+    padding: 140px;
+}
+.h{
+    grid-column: 1 /span 5;
+    grid-row: 6;
+    background-color: #ffebe4;
+    padding: 15px;
+}
+.i{
+    grid-column: 3;
+    grid-row: 3;
+    background-color: #c1cdb6;
+    padding: 140px;
+}
+.j{
+  grid-column: 2/ span 3;
+    grid-row: 5;
+    background-color: #4f5707;
+    padding: 20px;
+}
