--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body, html {
 
 body {
   /* The image used */
-  background-image: url("retro-sunrise-4k-ps.jpg");
+  background-image: url("p/retro-sunrise-4k-ps.jpg");
 
   /* Full height */
   height: 100%;
