--- a/Logitech_shop/index.css
+++ b/Logitech_shop/index.css
@@ -61,7 +61,7 @@ body {
 .wrapper {
         display: grid;
         grid-gap: 0px;
-        grid-template-columns: 30% 40% 30%;
+        grid-template-columns: auto auto auto;
         
     }
 
