--- a/Logitech_shop/About.css
+++ b/Logitech_shop/About.css
@@ -51,7 +51,7 @@ body {
 .wrapper {
         display: grid;
         grid-gap: 10px;
-        grid-template-columns: 30% 40% 30%;        
+        grid-template-columns: auto auto auto;        
     }
     .box {
         padding: 10px;
