--- a/Logitech_shop/About.css
+++ b/Logitech_shop/About.css
@@ -57,52 +57,55 @@ body {
         padding: 10px;
         font-size: 100%;
         background-color: gray;
+        text-align: center;
     }
 
     .a {
         grid-column-start: 1;
-        grid-column-end: 2;
+        grid-column-end: 4;
         grid-row-start: 1;
         grid-row-end : 2;
     }
     .b {
-        grid-column-start: 2;
+        grid-column-start: 1;
         grid-column-end: 4;
-        grid-row-start: 1;
-        grid-row-end : 2;
+        grid-row-start: 2;
+        grid-row-end : 3;
     }
     .c {
         grid-column-start: 1;
         grid-column-end: 2;
-        grid-row-start: 2;
-        grid-row-end : 3;
+        grid-row-start: 3;
+        grid-row-end : 4;
     }
     .d {
         grid-column-start: 2;
         grid-column-end: 4;
-        grid-row-start: 2;
-        grid-row-end : 3;
+        grid-row-start: 3;
+        grid-row-end : 4;
     }
     .e{
         grid-column-start: 1;
-        grid-column-end: 2;
-        grid-row-start: 3;
-        grid-row-end : 4;
+        grid-column-end: 4;
+        grid-row-start: 4;
+        grid-row-end : 5;
+        
     }
     .f{
         grid-column-start: 2;
         grid-column-end: 4;
-        grid-row-start: 3;
-        grid-row-end : 4;
+        grid-row-start: 6;
+        grid-row-end : 7;
     }
     .g {
         grid-column-start: 1;
         grid-column-end: 2;
-        grid-row-start: 4;
-        grid-row-end : 5;
+        grid-row-start: 7;
+        grid-row-end : 8;
     }
     .h {
         grid-column-start: 2;
         grid-column-end: 4;
-        grid-row-start: 4;
-        grid-row-end : 5;
+        grid-row-start: 7;
+        grid-row-end : 8;
+    }    
