--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,7 @@ a{
   text-decoration: none;  
 }
 a:hover{
-  text-decoration: underline;
-  color: rgb(252, 236, 12);
+  color: pink;
+  text-decoration: none;
 }
+
